--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-wechat-title": "^2.0.7",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "dayjs": "^1.11.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
