情绪日记本 3、情绪分析 (1)操作功能： ①数据可视化：根据标签画出情绪波动的折线图；按标签分类统计一周内各情绪占比并用饼图表示出来； ②整合折线图和饼图，生成文字分析，支持导出为PDF/图片

--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.9",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-wechat-title": "^2.0.7",
-    "vuex": "^4.1.0",
-    "dayjs": "^1.11.9"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
